--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<img src = "file:D:\Graph Comm\Ellis Brigham\logonb.png">
+<img src = "file:D:\Graph Comm\Ellis Brigham\logonb.png" alt = "Image of logo">
 
 </body>
 </html>
