--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
 </head>
 <body>
 
-<img src = "file:D:\Graph Comm\Ellis Brigham\logonb.png" alt = "Image of logo">
+<table>
+    <tr>
+        <th>Forename</th>
+        <th>Surname</th>
+    </tr>
+
+    <tr>
+        <td>Marcus</td>
+        <td>Douglas</td>
+    </tr>
+</table>
 
 </body>
 </html>
