--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <form>
     <fieldset>
         <legend>Please leave a comment</legend>
+        <label for="name">Name:</label>
     </fieldset>
 </form>
 
