--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <fieldset>
         <legend>Please leave a comment</legend>
         <label for="name">Name:</label>
+        <input type= "text" name = "name" value = "">
     </fieldset>
 </form>
 
