--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <legend>Please leave a comment</legend>
         <label for="name">Name:</label>
         <input type= "text" name = "name" value = "">
+        <label for="email">Email:</label>
+        <input type="text" name = "email" value = "">
+        <label for="comments">Comment:</label>
+        <textarea name="comments" cols="30" rows="10"></textarea>
     </fieldset>
 </form>
 
