--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <input type= "text" name = "name" value = "">
         <label for="email">Email:</label>
         <input type="text" name = "email" value = "">
-        <label for="comments">Comment:</label>
+        <label for="comments">Comment:</label><br>
         <textarea name="comments" cols="30" rows="10"></textarea>
     </fieldset>
 </form>
