--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <label for="name">Name:</label>
         <input type= "text" name = "name" value = "">
         <label for="email">Email:</label>
-        <input type="text" name = "email" value = "">
-        <label for="comments">Comment:</label><br><br><br>
+        <input type="text" name = "email" value = ""><br><br><br>
+        <label for="comments">Comment:</label>
         <textarea name="comments" cols="30" rows="10"></textarea>
     </fieldset>
 </form>
