--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </table>
 
 <form>
-    <fieldset>
+    <fieldset style = "width: 400px;">
         <legend>Please leave a comment</legend>
         <label for="name">Name:</label>
         <input type= "text" name = "name" value = "">
