--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </table>
 
 <form>
-    <fieldset style = "width: 400px;">
+    <fieldset style = "width: 600px;">
         <legend>Please leave a comment</legend>
         <label for="name">Name:</label>
         <input type= "text" name = "name" value = "">
@@ -28,6 +28,13 @@
         <label for="comments">Comment:</label>
         <textarea name="comments" cols="30" rows="10"></textarea>
     </fieldset>
+</form>
+
+<form>
+    Username: <br>
+    <input type="text" name = "username"><br>
+    Password: <br>
+    <input type="password" name = "password">
 </form>
 
 </body>
