--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     Username: <br>
     <input type="text" name = "username"><br>
     Password: <br>
-    <input type="password" name = "password">
+    <input type="password" name = "psw">
 </form>
 
 </body>
