--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <input type="text" name = "username"><br>
     Password: <br>
     <input type="password" name = "psw">
+    <input type="submit" value = "submit">
 </form>
 
 </body>
