--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </fieldset>
 </form>
 
-<form action = "action_page.php">
+<form action = "#">
     Username: <br>
     <input type="text" name = "username"><br>
     Password: <br>
