--- a/index.html
+++ b/index.html
@@ -38,5 +38,10 @@
     <input type="submit" value = "submit">
 </form>
 
+<form>
+    Birthday : <br>
+    <input type="date" name = "bday">
+</form>
+
 </body>
 </html>
