--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
     Birthday : <br>
     <input type="date" name = "bday">
 </form>
+<br>
 
-<input type="checkbox">
+<input type="checkbox" name = "vehicle">
+I walk to Uni <br>
+<input type="checkbox" name = "vehicle">
+I drive to Uni <br>
 
 </body>
 </html>
