--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 </form>
 <br>
 
-<input type="checkbox" name = "vehicle">
+<input type="checkbox" name = "vehicle" value = "car">
 I walk to Uni <br>
-<input type="checkbox" name = "vehicle">
+<input type="checkbox" name = "vehicle" value = "bike">
 I drive to Uni <br>
 
 </body>
