--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <label for="name">Name:</label>
         <input type= "text" name = "name" value = "">
         <label for="email">Email:</label>
+
+        <label for="location">Location:</label>
+        <select name="location">
+            <option value="">Select Location</option>
+        </select>
+
         <input type="text" name = "email" value = ""><br><br><br>
         <label for="comments">Comment:</label>
         <textarea name="comments" cols="30" rows="10"></textarea>
@@ -44,10 +50,10 @@
 </form>
 <br>
 
-<input type="radio" name = "vehicle" value = "car">
-I walk to Uni <br>
-<input type="radio" name = "vehicle" value = "bike">
-I drive to Uni <br>
+<input type="radio" name = "sex" value = "car">
+Male <br>
+<input type="radio" name = "sex" value = "bike">
+Female <br>
 
 </body>
 </html>
