--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <label for="location">Location:</label>
         <select name="location">
             <option value="">Select Location</option>
+            <option value="Inverness">Inverness</option>
+            <option value="Aberdeen">Aberdeen</option>
         </select>
     </fieldset>
 </form>
