--- a/index.html
+++ b/index.html
@@ -55,5 +55,10 @@ Male <br>
 <input type="radio" name = "sex" value = "bike">
 Female <br>
 
+<form>
+    Select Colour:
+    <input type="color" name = "favcolor">
+</form>
+
 </body>
 </html>
