--- a/index.html
+++ b/index.html
@@ -60,5 +60,11 @@ Female <br>
     <input type="color" name = "favcolor">
 </form>
 
+<form>
+    Email:
+    <input type="email" name = "email">
+    <input type="submit">
+</form>
+
 </body>
 </html>
